--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -8,7 +8,7 @@
  		
         <!--About me-->
         <div class="title_content">
-            <div class="text_content">brown smith</div>
+            <div class="text_content">xavier lamourec</div>
             <div class="clear"></div>
         </div>
 
@@ -17,56 +17,56 @@
             <li>
                 <i class="glyphicon glyphicon-user"></i>
                 <label>Name</label>
-                <span class="value">Brown Smith</span>
+                <span class="value">Xavier Lamourec</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-calendar"></i>
                 <label>Date of birth</label>
-                <span class="value">March 18, 1988</span>
+                <span class="value">December 05, 1983</span>
                 <div class="clear"></div>
             </li>
 
             <li> 
                 <i class="glyphicon glyphicon-map-marker"></i>
                 <label>Adress</label>
-                <span class="value">San Francisco , CA</span>
+                <span class="value">Dundalk , Ireland</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">brown.smith@gmail.com</span>
+                <span class="value">xavier.lamourec@gmail.com</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-phone"></i>
                 <label>Phone</label>
-                <span class="value">+123 (21) 1234-5678</span>
+                <span class="value">+353 83-88-46-758</span>
                 <div class="clear"></div>
             </li>
 
-            <li>
+         <!--    <li>
                 <i class="glyphicon glyphicon-globe"></i>
                 <label>Website</label>
                 <span class="value"><a href="#" target="_blank">sc.chinaz.com</a></span>
                 <div class="clear"></div>
-            </li>
+            </li> -->
 
         </ul>
 
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis.
+            I have been working in IT for about 10 years, I am getting specialized in Java development to enhance my working base and progress within the industtry.
         </p>
         
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. 
+            I am a Team player always striving to develop personally and profesionally by accepting every new challenge, networking with other industry professionals and consistently placing client solutions, satisfaction and service at the forefront of operations. 
 
         </p>
 
