--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,4 +1,4 @@
-<!-- profile -->
+profile -->
 <div id="profile" class="content_2">
     <!-- .title -->
 <h1 class="h-bloc">Profile - About Me</h1>
@@ -59,10 +59,10 @@
         </ul>
 
 
-        <p style="margin-bottom:20px">
+       <!--  <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            I have been working in IT for about 10 years, I am getting specialized in Java development to enhance my working base and progress within the industtry.
-        </p>
+            I have been working in IT for about 10 years, I am getting specialized in Java development to enhance my working base and progress within the industry.
+        </p> -->
         
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
@@ -195,4 +195,4 @@
 
 <div class="clear"></div>
 </div>
-<!-- End .profile -->
+<!-- End .profile
