--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,4 +1,4 @@
-profile -->
+<!-- profile -->
 <div id="profile" class="content_2">
     <!-- .title -->
 <h1 class="h-bloc">Profile - About Me</h1>
@@ -195,4 +195,4 @@ profile -->
 
 <div class="clear"></div>
 </div>
-<!-- End .profile
+<!-- End .profile -->
