--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-.contact -->
+<!-- .contact -->
 <div id="contact" class="content_2">
         
 <h1 class="h-bloc">Contact - Contact Me</h1>
@@ -6,9 +6,9 @@
 
 <div class="row">
 
-    <!-- <div class="col-lg-12">
+    <div class="col-lg-12">
         <div id="map"></div>
-    </div>   -->
+    </div>  
 
     <div class="col-lg-12">
         <div class="row" id="contact-user">
@@ -25,10 +25,10 @@
                         <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> Dundalk, Ireland<br /><br /></li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> xavier.lamourec@gmail.com</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> +123 456 789 111</li>
-                       <!--  <li><span class="span-info"><i class="glyphicon glyphicon-globe"></i> Website:</span> www.brown-smith.com</li>
+                       <!-- <li><span class="span-info"><i class="glyphicon glyphicon-globe"></i> Website:</span> www.brown-smith.com</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-comment"></i> Skype:</span> brown-smith-skype</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-thumbs-up"></i> G. Drive:</span> brown-s-gm@gmail.com</li>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-unchecked"></i> Skydrive:</span> brown-s-sk@hotmail.com</li> -->
+                        <li><span class="span-info"><i class="glyphicon glyphicon-unchecked"></i> Skydrive:</span> brown-s-sk@hotmail.com</li>-->
                     </ul>
                 </div>
                 <!-- /Contact Info -->
@@ -44,11 +44,12 @@
             
 
                     <div id="profile_social">
-                        <a href="#"><i class="fa fa-github"></i></a>
-                       <!--  <a href="#"><i class="fa fa-twitter"></i></a>
+                       <!-- <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
                         <a href="#"><i class="fa fa-linkedin"></i></a>
                         <a href="#"><i class="fa fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-foursquare"></i></a> -->
+                        <a href="#"><i class="fa fa-foursquare"></i></a>-->
+                        <a href="https://github.com/xbreizh/"><i class="fa fa-github"></i></a>
                         <div class="clear"></div>
                     </div>
       
@@ -100,4 +101,4 @@
 
 </div>                                            
 </div>
-    <!-- End .contact
+    <!-- End .contact -->
