--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -86,7 +86,7 @@
 </div>
 
 
-<!-- begin service -->
+<!-- begin service --><!--
 <div class="clear"></div>
 <div class="row" id="services">
 	<div class="col-md-12">
@@ -128,7 +128,7 @@
 
 
 
-<!-- service 2 -->
+<!-- service 2 --><!--
 <div class="clear"></div>
 <div class="border-list"></div>
 
@@ -192,7 +192,7 @@
 </div>
 </div>
 <!-- end service 2 -->
-
+<!--
 <div class="clear"></div>
 </div>
 <!-- End .profile -->
