--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -62,8 +62,8 @@
        <!--  <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
             I have been working in IT for about 10 years, I am getting specialized in Java development to enhance my working base and progress within the industry.
-        </p> -->
-        
+        </p>
+        -->
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
             I am a Team player always striving to develop personally and profesionally by accepting every new challenge, networking with other industry professionals and consistently placing client solutions, satisfaction and service at the forefront of operations. 
@@ -86,7 +86,7 @@
 </div>
 
 
-<!-- begin service --><!--
+<!-- begin service -->
 <div class="clear"></div>
 <div class="row" id="services">
 	<div class="col-md-12">
@@ -128,7 +128,7 @@
 
 
 
-<!-- service 2 --><!--
+<!-- service 2 -->
 <div class="clear"></div>
 <div class="border-list"></div>
 
@@ -192,7 +192,7 @@
 </div>
 </div>
 <!-- end service 2 -->
-<!--
+
 <div class="clear"></div>
 </div>
 <!-- End .profile -->
