--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -86,7 +86,7 @@
 </div>
 
 
-<!-- begin service -->
+<!-- begin service --><!--
 <div class="clear"></div>
 <div class="row" id="services">
 	<div class="col-md-12">
@@ -124,11 +124,11 @@
             </div>
         </div>
      </div> 
-</div><!-- End Services -->
+</div>--><!-- End Services -->
 
 
 
-<!-- service 2 -->
+<!-- service 2 --><!--
 <div class="clear"></div>
 <div class="border-list"></div>
 
@@ -190,9 +190,9 @@
 
     </div>
 </div>
-</div>
+</div>-->
 <!-- end service 2 -->
-
+<!--
 <div class="clear"></div>
-</div>
+</div>-->
 <!-- End .profile -->
