--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -193,6 +193,6 @@
 </div>-->
 <!-- end service 2 -->
 <!--
-<div class="clear"></div>
-</div>-->
+<div class="clear"></div>-->
+</div>
 <!-- End .profile -->
