--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,9 +6,9 @@
 
 <div class="row">
 
-    <div class="col-lg-12">
+   <!--  <div class="col-lg-12">
         <div id="map"></div>
-    </div>  
+    </div>   -->
 
     <div class="col-lg-12">
         <div class="row" id="contact-user">
