--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/jquery.mCustomScrollbar.css" />
         
         <!-- CSS | Colors -->
-        <link rel="stylesheet" type="text/css" href="assets/css/colors/DarkBlue.css" id="colors-style" />
+        <link rel="stylesheet" type="text/css" href="assets/css/colors/green.css" id="colors-style" />
         <link rel="stylesheet" type="text/css" href="assets/css/switcher.css" />
         
         <!-- CSS | Style -->
