--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
     <head>
 
-        <title>Panel CV Theme</title>
+        <title>Xavier Lamourec</title>
 
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -39,7 +39,7 @@
         <!-- CSS | Google Fonts -->
         <link href='http://fonts.useso.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
         <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="images/favicon/favicon.ico">
+       <!-- <link rel="shortcut icon" type="image/x-icon" href="images/favicon/favicon.ico">-->
 
         <!--[if IE 7]>
                 <link rel="stylesheet" type="text/css" href="assets/css/icons/font-awesome-ie7.min.css"/>
