--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -25,16 +25,11 @@
                         <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> Dundalk, Ireland<br /><br /></li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> xavier.lamourec@gmail.com</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> +123 456 789 111</li>
-                       <!-- <li><span class="span-info"><i class="glyphicon glyphicon-globe"></i> Website:</span> www.brown-smith.com</li>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-comment"></i> Skype:</span> brown-smith-skype</li>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-thumbs-up"></i> G. Drive:</span> brown-s-gm@gmail.com</li>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-unchecked"></i> Skydrive:</span> brown-s-sk@hotmail.com</li>-->
                     </ul>
                 </div>
                 <!-- /Contact Info -->
                 <div class="clear"></div>
 
-                <!--<h3 class="main-heading" style="margin-left: 22px;"><span>Follow me</span></h3>-->
 
                 <div class="title_content tiltle_contacts" style="float: none;">
                     <div class="text_content">Follow me</div>
@@ -44,11 +39,10 @@
             
 
                     <div id="profile_social">
-                       <!-- <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-foursquare"></i></a>-->
+                        <a style="visibility:hidden"
+                        href="https://github.com/xbreizh/"><i class="fa fa-github"></i></a>
+                        <a style="visibility:hidden"
+                        href="https://github.com/xbreizh/"><i class="fa fa-github"></i></a>
                         <a href="https://github.com/xbreizh/"><i class="fa fa-github"></i></a>
                         <div class="clear"></div>
                     </div>
@@ -71,7 +65,7 @@
 
                     <div id="contact-status"></div>
 
-                    <form action="#" id="contactform">
+                    <form action="mailto:xavier.lamourec@gmail.com?subject=portfolio-mail" method="post" enctype="text/plain" id="contactform" onsubmit="clear" >
                         <p class="form-group" id="contact-name">
                             <label for="name">Your Name</label>
                             <input type="text" name="name" class="form-control name-contact" id="inputSuccess" placeholder="Name..." />
