--- a/_includes/hobbies.html
+++ b/_includes/hobbies.html
@@ -1,6 +1,6 @@
 <!-- .blog -->
 <div id="blog" class="content_2">
-<h1 class="h-bloc">Blog - My Blogue</h1><br> 
+<h1 class="h-bloc">Hobbies - Work in progress</h1><br> 
 
 <div class="col-md-12">
     <div class="row">
