--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -31,10 +31,34 @@
                 <div class="skill-bar-percent">75%</div>
             </div>
             <!-- /.skillbar -->
+
+            <!-- .skillbar -->
+            <div class="skillbar clearfix" data-percent="75%">
+                <div class="skillbar-title"><span>Thymeleaf</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">75%</div>
+            </div>
+            <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="70%">
                 <div class="skillbar-title"><span>Hibernate</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">70%</div>
+            </div>
+            <!-- /.skillbar -->
+
+            <!-- .skillbar -->
+            <div class="skillbar clearfix" data-percent="75%">
+                <div class="skillbar-title"><span>Maven</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">75%</div>
+            </div>
+            <!-- /.skillbar -->
+
+            <!-- .skillbar -->
+            <div class="skillbar clearfix" data-percent="70%">
+                <div class="skillbar-title"><span>Gradle</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">70%</div>
             </div>
@@ -124,9 +148,16 @@
 
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="75%">
-                <div class="skillbar-title"><span>Jenkins</span></div>
+                <div class="skillbar-title"><span>Docker</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">75%</div>
+            </div>
+
+            <!-- .skillbar -->
+            <div class="skillbar clearfix" data-percent="65%">
+                <div class="skillbar-title"><span>Jenkins</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">65%</div>
             </div>
             
              <!-- .skillbar -->
@@ -265,6 +296,14 @@
                 <div class="skill-bar-percent">75%</div>
             </div>
             <!-- /.skillbar -->
+
+            <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="75%">
+                <div class="skillbar-title"><span>Whittling</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">75%</div>
+            </div>
+            <!-- /.skillbar -->
         </div>
         
         
@@ -276,7 +315,7 @@
         <!-- /.title_content -->
         
         <!-- .download_resume -->
-        <a class="download" style="margin:0;float: left;" href="#">
+        <a class="download" style="margin:0;float: left;" href="cv_xlamourec.pdf" download>
             <span data-hover="Download My Resume"><i class="glyphicon glyphicon-download-alt"></i> Download My Resume</span>
         </a>
         <!-- /.download_resume -->
