--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -9,11 +9,20 @@
 
         <!-- #filters -->
         <ul id="filters" class="clearfix">
-            <li><span class="filter active" data-filter="catWeb catGraphic catMotion logo">All</span></li>
-            <li><span class="filter" data-filter="catWeb">Web Design</span></li>
-            <li><span class="filter" data-filter="catGraphic">Graphic Design</span></li>
-            <li><span class="filter" data-filter="catMotion">Motion Graphic</span></li>
-            <li><span class="filter" data-filter="logo">Logo</span></li>
+            <li><span class="filter active" data-filter="java-core spring struts ci-cd">All</span></li>
+            <li><span class="filter" data-filter="java-core">Java Core</span></li>
+            <li><span class="filter" data-filter="spring">Spring</span></li>
+            <li><span class="filter" data-filter="soap">SOAP</span></li>
+            <li><span class="filter" data-filter="rest">REST</span></li>
+            <li><span class="filter" data-filter="rest">Maven</span></li>
+            <li><span class="filter" data-filter="rest">Gradle</span></li>
+            <li><span class="filter" data-filter="hibernate">Hibernate</span></li>
+            <li><span class="filter" data-filter="docker">Docker</span></li>
+            <li><span class="filter" data-filter="struts">Struts</span></li>
+            <li><span class="filter" data-filter="jenkins">Jenkins</span></li>
+            <li><span class="filter" data-filter="junit">Junit</span></li>
+            <li><span class="filter" data-filter="sonarqube">Sonarqube</span></li>
+            <li><span class="filter" data-filter="javascript">Javascript</span></li>
         </ul>
         <!-- /#filters -->
 
@@ -21,15 +30,16 @@
         <div id="portfoliolist">
 
             <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">	
+            <div class="portfolio java-core" data-cat="java-core">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/1.jpg" rel="portfolio" title="Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet">
-                        <img src="images/portfolio/1.jpg" alt="Visual Infography" />
+                    <a href="images/portfolio/mastermind.jpg" rel="portfolio" title="A simple Mastermind game in Java">
+                        <img src="images/portfolio/mastermind.jpg" alt="Visual Infography" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
+                                <a style="decoration:none" class="text-title" href="https://github.com/xbreizh/Mastermind" target="_blank">MasterMind</a>
+                                <a class="text-title" href="https://github.com/xbreizh/Mastermind" target="_blank">
+                                <span class="text-category">Java Core</span></a>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -42,16 +52,18 @@
 
 
             <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">	
+            <div class="portfolio java-core struts hibernate javascript" data-cat="java-core struts hibernate javascript">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
-                    <a href="http://www.youtube.com/watch?v=c9MnSeYYtYY" rel="portfolio">
+                    <a href="images/portfolio/climbing2.jpg" rel="portfolio" title="A web-application to find climbing spots. 
+                    Uses Struts with jsp and connecting to a postgres type database with hibernate">
 
-                        <img src="images/portfolio/2.jpg" alt="Visual Infography" />
+                        <img src="images/portfolio/climbing.jpg" alt="" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web Design</span>
+                                <a class="text-title" href="https://github.com/xbreizh/climb" target="_blank" >Climb</a>
+                                <a class="text-title" href="https://github.com/xbreizh/climb" target="_blank" >
+                                <span class="text-category">MVC Struts</span></a>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -62,15 +74,17 @@
             <!-- /.portfolio -->
 
             <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">
+            <div class="portfolio java-core spring maven soap hibernate docker junit jenkins sonarqube" data-cat="java-core spring maven soap hibernate docker junit jenkins sonarqube">
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/3.jpg" rel="portfolio">
-                        <img src="images/portfolio/3.jpg" alt="Sonor's Design" />
+                    <a href="images/portfolio/library.jpg" rel="portfolio" title="A library application allowing to register books, renting and alerting by email.
+                    Uses Maven, SOAP web-services, Spring Mail, Spring MVC, Hibernate">
+                        <img src="images/portfolio/library.jpg" alt="Library" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web design</span>
+                                <a class="text-title" href="https://github.com/xbreizh/biblio" target="_blank">Biblio</a>
+                                <a class="text-title" href="https://github.com/xbreizh/biblio" target="_blank">
+                                <span class="text-category">SOAP Web-Service</span></a>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -81,15 +95,16 @@
             <!-- /.portfolio -->
 
             <!-- .portfolio -->
-            <div class="portfolio catMotion" data-cat="catMotion">
+            <div class="portfolio java-core maven spring junit hibernate docker jenkins sonarqube" data-cat="java-core maven spring junit hibernate docker jenkins sonarqube">
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/4.jpg" rel="portfolio">
-                        <img src="images/portfolio/4.jpg" alt="Typography Company" />
+                    <a href="images/portfolio/erp.jpg" rel="portfolio" title="Continuous Integration added to an existing project">
+                        <img src="images/portfolio/erp.jpg" alt="erp" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Motion Graphic</span>
+                                <a class="text-title" href="https://github.com/xbreizh/myerp" target="_blank">MyERP</a>
+                                <a class="text-title" href="https://github.com/xbreizh/myerp" target="_blank">
+                                <span class="text-category">Continuous Integration</span></a>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -100,15 +115,17 @@
             <!-- /.portfolio -->
 
             <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">
+            <div class="portfolio java-core gradle rest junit hibernate docker jenkins sonarqube javascript" data-cat="java-core gradle rest junit hibernate docker jenkins sonarqube javascript">
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">
-                    <a href="images/portfolio/5.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">
-                        <img src="images/portfolio/5.jpg" alt="Weatherette" />
+                    <a href="images/portfolio/motor.jpg" title="A garage Web-Service in REST
+                    allowing the owner to manage their stock and their daily tasks" rel="portfolio">
+                        <img src="images/portfolio/motor.jpg" alt="motor" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web Design</span>
+                                <a class="text-title" href="https://github.com/xbreizh/Autodoc" target="_blank">Autodoc</a>
+                                <a class="text-title" href="https://github.com/xbreizh/Autodoc" target="_blank">
+                                <span class="text-category">REST Web-Service</span></a>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -118,138 +135,7 @@
             </div>	
             <!-- /.portfolio -->
 
-            <!-- .portfolio -->
-            <div class="portfolio catMotion" data-cat="catMotion">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/6.jpg" rel="portfolio">				
-                        <img src="images/portfolio/6.jpg" alt="BMF" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Motion Graphic</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catGraphic" data-cat="catGraphic">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/7.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">				
-                        <img src="images/portfolio/7.jpg" alt="Techlion" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Graphic Design</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/8.jpg" rel="portfolio" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien.">
-                        <img src="images/portfolio/8.jpg" alt="KittyPic" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/9.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">
-                        <img src="images/portfolio/9.jpg" alt="Graph Plotting" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web Design</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catGraphic" data-cat="catGraphic">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">	
-                    <a href="images/portfolio/10.jpg" rel="portfolio">
-                        <img src="images/portfolio/10.jpg" alt="QR Quick Response" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Graphic Design</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">	
-                    <a href="images/portfolio/11.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">
-                        <img src="images/portfolio/11.jpg" alt="Mobi Sock" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">
-                    <a href="images/portfolio/12.jpg" rel="portfolio">
-                        <img src="images/portfolio/12.jpg" alt="Village Community Church" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
+           
 
             <div class="clear"></div>
 
