--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -29,112 +29,15 @@
         <!-- #portfoliolist -->
         <div id="portfoliolist">
 
-            <!-- .portfolio -->
-            <div class="portfolio java-core" data-cat="java-core">	
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/mastermind.jpg" rel="portfolio" title="A simple Mastermind game in Java">
-                        <img src="images/portfolio/mastermind.jpg" alt="Visual Infography" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a style="decoration:none" class="text-title" href="https://github.com/xbreizh/Mastermind" target="_blank">MasterMind</a>
-                                <a class="text-title" href="https://github.com/xbreizh/Mastermind" target="_blank">
-                                <span class="text-category">Java Core</span></a>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>		
-            <!-- /.portfolio -->
+            {% include /portfolio/P1-Mastermind.html %}
 
+            {% include /portfolio/P2-climb.html %}
 
+            {% include /portfolio/P3-library.html %}
 
-            <!-- .portfolio -->
-            <div class="portfolio java-core struts hibernate javascript" data-cat="java-core struts hibernate javascript">	
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/climbing2.jpg" rel="portfolio" title="A web-application to find climbing spots. 
-                    Uses Struts with jsp and connecting to a postgres type database with hibernate">
+            {% include /portfolio/P4-myErp.html %}
 
-                        <img src="images/portfolio/climbing.jpg" alt="" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title" href="https://github.com/xbreizh/climb" target="_blank" >Climb</a>
-                                <a class="text-title" href="https://github.com/xbreizh/climb" target="_blank" >
-                                <span class="text-category">MVC Struts</span></a>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>		
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio java-core spring maven soap hibernate docker junit jenkins sonarqube" data-cat="java-core spring maven soap hibernate docker junit jenkins sonarqube">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/library.jpg" rel="portfolio" title="A library application allowing to register books, renting and alerting by email.
-                    Uses Maven, SOAP web-services, Spring Mail, Spring MVC, Hibernate">
-                        <img src="images/portfolio/library.jpg" alt="Library" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title" href="https://github.com/xbreizh/biblio" target="_blank">Biblio</a>
-                                <a class="text-title" href="https://github.com/xbreizh/biblio" target="_blank">
-                                <span class="text-category">SOAP Web-Service</span></a>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>				
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio java-core maven spring junit hibernate docker jenkins sonarqube" data-cat="java-core maven spring junit hibernate docker jenkins sonarqube">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/erp.jpg" rel="portfolio" title="Continuous Integration added to an existing project">
-                        <img src="images/portfolio/erp.jpg" alt="erp" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title" href="https://github.com/xbreizh/myerp" target="_blank">MyERP</a>
-                                <a class="text-title" href="https://github.com/xbreizh/myerp" target="_blank">
-                                <span class="text-category">Continuous Integration</span></a>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio java-core gradle rest junit hibernate docker jenkins sonarqube javascript" data-cat="java-core gradle rest junit hibernate docker jenkins sonarqube javascript">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">
-                    <a href="images/portfolio/motor.jpg" title="A garage Web-Service in REST
-                    allowing the owner to manage their stock and their daily tasks" rel="portfolio">
-                        <img src="images/portfolio/motor.jpg" alt="motor" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title" href="https://github.com/xbreizh/Autodoc" target="_blank">Autodoc</a>
-                                <a class="text-title" href="https://github.com/xbreizh/Autodoc" target="_blank">
-                                <span class="text-category">REST Web-Service</span></a>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
+            {% include /portfolio/P5-Autodoc.html %}     
            
 
             <div class="clear"></div>
