--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -66,7 +66,7 @@
         -->
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            I am a Team player always striving to develop personally and profesionally by accepting every new challenge, networking with other industry professionals and consistently placing client solutions, satisfaction and service at the forefront of operations. 
+            I am a Team player always striving to develop personally and professionally by accepting every new challenge, networking with other industry professionals and consistently placing client solutions, satisfaction and service at the forefront of operations. 
 
         </p>
 
