corrected bug in skills selection

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -14,8 +14,8 @@
             <li><span class="filter" data-filter="spring">Spring</span></li>
             <li><span class="filter" data-filter="soap">SOAP</span></li>
             <li><span class="filter" data-filter="rest">REST</span></li>
-            <li><span class="filter" data-filter="rest">Maven</span></li>
-            <li><span class="filter" data-filter="rest">Gradle</span></li>
+            <li><span class="filter" data-filter="maven">Maven</span></li>
+            <li><span class="filter" data-filter="gradle">Gradle</span></li>
             <li><span class="filter" data-filter="hibernate">Hibernate</span></li>
             <li><span class="filter" data-filter="docker">Docker</span></li>
             <li><span class="filter" data-filter="struts">Struts</span></li>
