--- a/_includes/portfolio/P2-climb.html
+++ b/_includes/portfolio/P2-climb.html
@@ -1,5 +1,5 @@
 <!-- .portfolio -->
-            <div class="portfolio java-core struts hibernate javascript" data-cat="java-core struts hibernate javascript">	
+            <div class="portfolio java-core struts hibernate javascript maven" data-cat="java-core struts hibernate javascript maven">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="images/portfolio/p2-climbing/climb.gif" rel="portfolio" title="A web-application to find climbing spots. 
