updated cv, added config details

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,9 +22,9 @@
                     </div>
 
                     <ul>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> Dundalk, Ireland<br /><br /></li>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> xavier.lamourec@gmail.com</li>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> +123 456 789 111</li>
+                        <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> {{site.address}}<br /><br /></li>
+                        <li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> {{site.email}}</li>
+                        <li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> {{site.phoneNumber}}</li>
                     </ul>
                 </div>
                 <!-- /Contact Info -->
@@ -43,7 +43,7 @@
                         href="https://github.com/xbreizh/"><i class="fa fa-github"></i></a>
                         <a style="visibility:hidden"
                         href="https://github.com/xbreizh/"><i class="fa fa-github"></i></a>
-                        <a href="https://github.com/xbreizh/"><i class="fa fa-github"></i></a>
+                        <a href="{{site.github}}"><i class="fa fa-github"></i></a>
                         <div class="clear"></div>
                     </div>
       
