--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -378,7 +378,12 @@
             <li class="first">
                 <h5>Java developer - Bachelor level<span class="duration"><i class="fa fa-calendar color"></i> 2018 - 2020</span></h5>
                 <h6><span class="fa fa-book"></span> Openclassrooms, Academy of Paris</h6>
-                <p>Software conception and development</p>
+                    </p>Software design and conception</p>
+                    <p>Full project creation from Database to User interface</p>
+                    <p>Test Driven Development oriented</p>
+                    <p>Setup and use of CI-CD environments</p>
+                    <p>Web Services creation ( SOAP/REST ) with documentation</p>
+                    <p>Software presentation and demonstration</p>
             </li>
             <li>
                 <h5>Master of Sport Sciences ( STAPS ) <span class="duration"><i class="fa fa-calendar color"></i> 2007</span></h5>
